{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 18,
  "lineage": "58f85178-6e8d-b0e7-e897-c5055f0ec181",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466551463358:subnet/subnet-0ac749aa53aa8dab9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.10.3.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "ap-southeast-1a"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "dev-data-stream-public-subnet"
                ]
              }
            ],
            "id": "subnet-0ac749aa53aa8dab9",
            "map_public_ip_on_launch": true,
            "owner_id": "466551463358",
            "state": "available",
            "tags": {
              "Name": "dev-data-stream-public-subnet"
            },
            "vpc_id": "vpc-0a52713ccd32ed5f3"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466551463358:subnet/subnet-04872f88b4d25314a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.10.4.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "ap-southeast-1b"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "dev-data-stream-public-subnet"
                ]
              }
            ],
            "id": "subnet-04872f88b4d25314a",
            "map_public_ip_on_launch": true,
            "owner_id": "466551463358",
            "state": "available",
            "tags": {
              "Name": "dev-data-stream-public-subnet"
            },
            "vpc_id": "vpc-0a52713ccd32ed5f3"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466551463358:subnet/subnet-0e607f14ce3ca93d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.10.5.0/24",
            "default_for_az": false,
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "ap-southeast-1c"
                ]
              },
              {
                "name": "tag:Name",
                "values": [
                  "dev-data-stream-public-subnet"
                ]
              }
            ],
            "id": "subnet-0e607f14ce3ca93d3",
            "map_public_ip_on_launch": true,
            "owner_id": "466551463358",
            "state": "available",
            "tags": {
              "Name": "dev-data-stream-public-subnet"
            },
            "vpc_id": "vpc-0a52713ccd32ed5f3"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466551463358:vpc/vpc-0a52713ccd32ed5f3",
            "cidr_block": "172.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0124e5082cbfa95c1",
                "cidr_block": "172.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-e7ca3c80",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "dev-data-stream-vpc"
                ]
              }
            ],
            "id": "vpc-0a52713ccd32ed5f3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03da5a17ac036e683",
            "owner_id": "466551463358",
            "state": "available",
            "tags": {
              "Name": "dev-data-stream-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ops_stream_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:466551463358:loadbalancer/app/ops-stream/4aba82b1ee737b9f",
            "arn_suffix": "app/ops-stream/4aba82b1ee737b9f",
            "dns_name": "ops-stream-1605619007.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:466551463358:loadbalancer/app/ops-stream/4aba82b1ee737b9f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ops-stream",
            "security_groups": [
              "sg-03e6aa6fc9fdf8189"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04872f88b4d25314a"
              },
              {
                "subnet_id": "subnet-0ac749aa53aa8dab9"
              },
              {
                "subnet_id": "subnet-0e607f14ce3ca93d3"
              }
            ],
            "subnets": [
              "subnet-04872f88b4d25314a",
              "subnet-0ac749aa53aa8dab9",
              "subnet-0e607f14ce3ca93d3"
            ],
            "vpc_id": "vpc-0a52713ccd32ed5f3",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end_ops_stream",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:466551463358:listener/app/ops-stream/4aba82b1ee737b9f/e869e84804a9326a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:466551463358:targetgroup/ops-stream-target-group/ad7382b3ee34de15",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:466551463358:listener/app/ops-stream/4aba82b1ee737b9f/e869e84804a9326a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:466551463358:loadbalancer/app/ops-stream/4aba82b1ee737b9f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.ops_stream_lb",
            "aws_alb_target_group.ops_stream_target",
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ops_stream_target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:466551463358:targetgroup/ops-stream-target-group/ad7382b3ee34de15",
            "arn_suffix": "targetgroup/ops-stream-target-group/ad7382b3ee34de15",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v2/index",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:466551463358:targetgroup/ops-stream-target-group/ad7382b3ee34de15",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ops-stream-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a52713ccd32ed5f3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466551463358:security-group/sg-00d5cdaf913e83292",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d5cdaf913e83292",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03e6aa6fc9fdf8189"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ops-stream-ecs-tasks-security-group",
            "name_prefix": null,
            "owner_id": "466551463358",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a52713ccd32ed5f3"
          },
          "dependencies": [
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:466551463358:security-group/sg-03e6aa6fc9fdf8189",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e6aa6fc9fdf8189",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ops-stream-load-balancer-security-group",
            "name_prefix": null,
            "owner_id": "466551463358",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0a52713ccd32ed5f3"
          }
        }
      ]
    }
  ]
}